--- a/flawless/package.json
+++ b/flawless/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "@fontsource/montserrat": "^4.5.14",
         "@fontsource/yellowtail": "^4.5.8",
+        "@sanity/client": "^6.1.1",
+        "@sanity/image-url": "^1.0.2",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
