--- a/flawless/package.json
+++ b/flawless/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fontsource/montserrat": "^4.5.14",
         "@fontsource/yellowtail": "^4.5.8",
+        "@sanity/asset-utils": "^1.3.0",
         "@sanity/client": "^6.1.1",
         "@sanity/image-url": "^1.0.2",
         "@testing-library/jest-dom": "^5.16.5",
