--- a/flawless/package.json
+++ b/flawless/package.json
@@ -19,6 +19,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "react-router": "^6.11.2",
+        "react-router-dom": "^6.11.2",
         "react-scripts": "5.0.1",
         "react-transition-group": "^4.4.5",
         "typescript": "^4.9.5",
